# TibSchol-TEI-Library

./: .gitignore  LICENSE  README.md  distill_teis.py  errors.md  pyproject.toml
data/: instances.csv  tibschol_instances_with_relations.csv  tibschol_instances_with_relations.json  works.csv
data/excerpts/: 1_001_01_D_Rinchen_bde mchog nor bu.xml  1_001_02_D_Rinchen_rab gnas don gsal w.xml  1_001_03_D_Atisha Rinchen_mngon rtogs bshad.xml  1_001_05_D_Rinchen_bde can smon lam.xml  1_001_06_D_rNgog_dag yig bsdus.xml  1_001_07_rNgog_shes rab snying bshad don bsdus.xml  1_001_08_rNgog_mngon rtogs rgyan don bsdus.xml  1_001_09_D_rNgog_mdo sde rgyan don bsdus.xml  1_001_10_F_C_NO_M_rNgog_dbus mtha don bsdus_etext.xml  1_001_11_F_C_NC_M_rNgog_rgyud bla ma don bsdus_etext.xml  1_001_12_F_C_NC_rNgog_rigs thigs grel don bsdus_etext.xml  1_001_13_C_NI_rNgog_PVin dka' gnas.xml  1_001_14_F_C_NO_M_rNgog_spring yig bdud rtsi_etext.xml  1_002_01_rNgog Bre_yum brgyad stong don bsdus.xml  1_002_02_C_NI_Ar_sher phyin rgya grel_etext.xml  1_002_03_Ar_mngon rtogs rgyan grel rnam byed_etext.xml  1_003_01_Ar_sher phyin sdud tshigs rnam bshad A.xml  1_003_02_Ar_sher phyin sdud tshigs rnam bshad B_etext.xml  1_003_03_Gro_rngog lo rnam thar.xml  1_003_04_C_Gro_sdud tshigs rnam bshad.xml  1_003_05_C_Gro_brgyad stong grel chen rnam bshad.xml  1_004_01_F_C_NO_Gro_rin phreng lnga bcu pa.xml  1_004_02_1_005_01_F_NO_Gro_bstan rim chen mo_etext.xml  1_005_02_C_Gro bstan rim don bsdus.xml  1_005_03_C_Gro_nyi khri lnga stong.xml  (+373 more)
scripts/: cleaned_teis.py  fetch_apis_data.py  lookup.py
(+1 files in other folders)
