[project]
name = "datasets-teis"
version = "0.1.0"
description = "Script to extract finalized and reviewed excerpts into separate TEIs"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Saranya Balasubramanian", email = "saranya.balasubramanian@oeaw.ac.at" }]

dependencies = [
    "lxml",
    "pylint>=3.3.8",
    "tqdm",
]

[project.scripts]
tei-excerpt-processor = "extract_excerpts:main"
